--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -52,7 +52,8 @@ jobs:
           source ~/.venv/bin/activate
       - name: Install code and dependences
         run: |
-          python3 -m pip install -e .
+          LDFLAGS="-L$VIRTUAL_ENV/lib -Wl,-rpath=$VIRTUAL_ENV/lib" python3 -m pip install -e .
       - name: Run tests
         run: |
           pytest sbsearch -v --cov=sbsearch
+          pytest sbsearch -v --remote-data --cov=sbsearch
