--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -51,7 +51,8 @@ jobs:
         run: |
           source ~/.venv/bin/activate
           which python3
-          LDFLAGS="-L${VIRTUAL_ENV}/lib -Wl,-rpath=${VIRTUAL_ENV}/lib" CXXFLAGS="-I${VIRTUAL_ENV}/include" python3 -m pip install -e .
+          LDFLAGS="-L${VIRTUAL_ENV}/lib -Wl,-rpath=${VIRTUAL_ENV}/lib" CXXFLAGS="-I${VIRTUAL_ENV}/include" python3 -m pip install -e .[test]
       - name: Run tests
         run: |
+          source ~/.venv/bin/activate
           pytest sbsearch -v --cov=sbsearch
