--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -55,4 +55,5 @@ jobs:
       - name: Run tests
         run: |
           source ~/.venv/bin/activate
+          pip freeze
           pytest sbsearch -v --cov=sbsearch
