--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -57,3 +57,7 @@ jobs:
           source ~/.venv/bin/activate
           pip freeze
           pytest sbsearch -v --cov=sbsearch
+      - name: Upload results to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
