--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -56,7 +56,7 @@ jobs:
         run: |
           source ~/.venv/bin/activate
           pip freeze
-          pytest sbsearch -v --cov=sbsearch
+          pytest sbsearch -v --cov=sbsearch --cov-report=xml
       - name: Upload results to Codecov
         uses: codecov/codecov-action@v4
         with:
