--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ dependencies = [
     "astropy>=4.3",
     "astroquery>=0.4.5",
     "sbpy>0.3.0",
-    "sqlalchemy>=1.3,<1.4",
+    "sqlalchemy>=2.0",
     "cython>=0.30",
     "extension-helpers",
 ]
